// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HexEngine HexEngine should render correctly with default props 1`] = `
<svg
  className="grid"
  height={480}
  version="1.1"
  viewBox="-50 -50 100 100"
  width={640}
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    className="test1"
  >
    <g
      className="hexagon-group"
      draggable="true"
      onClick={[Function]}
      onDragEnd={[Function]}
      onDragOver={[Function]}
      onDragStart={[Function]}
      onDrop={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      transform="translate(0, 0)"
    >
      <g
        className="hexagon"
      >
        <polygon
          className=""
          points="10,0 5.000000000000001,8.660254037844386 -4.999999999999998,8.660254037844387 -10,1.2246467991473533e-15 -5.000000000000004,-8.660254037844386 5.000000000000001,-8.660254037844386"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`HexEngine HexEngine should render correctly with pointy orientation 1`] = `
<svg
  className="grid"
  height={480}
  version="1.1"
  viewBox="-50 -50 100 100"
  width={640}
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    className="test1"
  >
    <g
      className="hexagon-group"
      draggable="true"
      onClick={[Function]}
      onDragEnd={[Function]}
      onDragOver={[Function]}
      onDragStart={[Function]}
      onDrop={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      transform="translate(0, 0)"
    >
      <g
        className="hexagon"
      >
        <polygon
          className=""
          points="8.660254037844387,4.999999999999999 6.123233995736766e-16,10 -8.660254037844387,4.999999999999999 -8.660254037844389,-4.999999999999997 -1.8369701987210296e-15,-10 8.660254037844384,-5.000000000000004"
        />
      </g>
    </g>
  </g>
</svg>
`;
